--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -139,6 +139,8 @@ Operations:
 \par
 \begingroup
 \leftskip4em
+\textbf{1.1.1}
+
 Name: get\_event\_log\_from\_file()
 
 Arguments: path to a log file in csv format or XES format
@@ -160,6 +162,8 @@ Exceptions: None
 \par
 \begingroup
 \leftskip4em
+\textbf{1.1.2}
+
 Name: read\_XES()
 
 Arguments: file in XES format
@@ -196,6 +200,8 @@ Operations:
 \par
 \begingroup
 \leftskip4em
+\textbf{1.2.1} 
+
 Name: check\_event\_log()
 
 Arguments: table imported using read\_XES() 
@@ -217,9 +223,11 @@ Exceptions: None
 \par
 \begingroup
 \leftskip4em
-Name: get\_variants()
+\textbf{1.2.2}
 
-Arguments: table
+Name: lookup\_table()
+
+Arguments: table with all original columns
 
 Returns: lookup table containing a "variants" column and an "ID" column
 
@@ -234,10 +242,86 @@ Exceptions: None
 \par
 \endgroup
 
+\medskip
+
+\par
+\begingroup
+\leftskip4em
+\textbf{1.2.3}
+
+Name: get\_variants()
+
+Arguments: look-up table with variants and IDs for each variant
+
+Returns: set of unique trace variants
+
+Description: We create a set containing all the variants so that we can approach them when calculating the mappings later. Here we do not need to have access to the IDs.
+
+Precondition: The first column of the look-up table contains all trace variants
+
+Postcondition: a non-empty set containing the arrays describing each variant
+
+Exceptions: None
+
+\par
+\endgroup
+
+\subsection{Module 2: Customize}
+Name: Customize
+
+Type: module
+
+\textcolor{red}{Operations: setCandidates, getCandidates, setThresholds, getThresholds}
 
 
-\subsection{Module 2}
-%...
+
+
+\subsection{Module 3: Download}
+Name: File Creator
+
+Type: module
+
+\textcolor{red}{Operations: setCandidates, getCandidates, setThresholds, getThresholds}
+
+\subsection{Module 4: Calculate costs}
+Name: Cost function
+
+Type: module
+
+\textcolor{red}{Operations: mappings, optimalmapping, graph, storeoptCostinMatrix}
+
+
+\subsection{Module 5: Horizontal clustering of variants}
+Name: Label refinement based on clusters
+
+Type: module
+
+\textcolor{red}{Operations: clusterdetectionrelation, refinement}
+
+\subsection{Module 6: Vertical Refinement}
+Name: Label refinement within variant
+
+Type: module
+
+\textcolor{red}{Operations: relabel(graph, cluster, threshold)}
+
+
+
+\subsection{Module 7: Post-Processing}
+Name: Embed refinements into original log 
+
+Type: module
+
+\textcolor{red}{Operations: refinedlog(graph, lookup table)}
+
+
+
+
+
+
+
+
+
 
 \section{User Interface Design}
 \subsection{Application Control}
@@ -303,7 +387,8 @@ This Screen will be shown after finishing the algorithm. The user can now downlo
 \bibitem{paper}
 Lu, Xixi, et al. "Handling duplicated tasks in process discovery by refining event labels." International Conference on Business Process Management. Springer, Cham, 2016.
 
-
+\bibitem{matchings}
+Xixi Lu1, Dirk Fahland, Frank J.H.M. van den Biggelaar, Wil M.P. van der Aalst. "Detecting Deviating Behaviors without Models."
 
 
 \end{thebibliography}
