--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -607,14 +607,97 @@ Simultaneously we save all costs between pairs of variants in a list so that we 
 
 \textit{Type}: module
 
-\textcolor{red}{Operations: clusterdetectionrelation, refinement}
+\textit{Description}: This module clusters the event log and perfoms the label refinement based on these clusters.
+
+\textit{Attributes}: \begin{itemize}
+	\item Event Log graph which should be refined 
+	\item Customize object for the horizontal thresholds.
+\end{itemize}
+
+\textit{Resources}: none.
+
+\textit{Operations}: 
+\medskip
+
+\par
+\begingroup
+\leftskip4em
+\textbf{4.1} 
+
+\textit{Name}: cluster\_detection\_relation()
+
+\textit{Arguments}:  
+
+\textit{Returns}: void.
+
+\textit{Description}: Finds clusters inside.
+
+\textit{Precondition}: An event log graph with related costs.
+
+\textit{Postcondition}: The same graph object with detected clusters.
+
+\textit{Exceptions}: None
+\par
+\endgroup
+
+\medskip
+
+\par
+\begingroup
+\leftskip4em
+\textbf{4.2} 
+
+\textit{Name}: refinement()
+
+\textit{Arguments}: none.
+
+\textit{Returns}: A horizontal clustered graph.
+
+\textit{Description}: This method executes required steps to cluster a graph horizontal.
+
+\textit{Precondition}: A already clustered graph.
+
+\textit{Postcondition}: The same graph object with horizontal refined labels.
+
+\textit{Exceptions}: None
+\par
+\endgroup
 
 \subsection{Module 5: Vertical Refinement}
 \textit{Name}: Label refinement within variant
 
 \textit{Type}: module
 
-\textcolor{red}{Operations: relabel(graph, cluster, threshold)}
+\textit{Description}: This module execute the label refinement within variant for the Event log and is part of the refinment algorithm.
+
+\textit{Attributes}: none.
+
+\textit{Resources}: none.
+
+\textit{Operations}: 
+\medskip
+
+\par
+\begingroup
+\leftskip4em
+\textbf{5.1} 
+
+\textit{Name}: relabel()
+
+\textit{Arguments}: a graph, the associated cluster and the customization Object for the horizontal threshold, 
+
+\textit{Returns}: The realbeld graph
+
+\textit{Description}: Performs the vertical label refinement for the refinment algorithm.
+
+\textit{Precondition}: An already horizontal refined graph.
+
+\textit{Postcondition}: The same graph object with vertical refined labels.
+
+\textit{Exceptions}: None
+\par
+\endgroup
+
 
 
 
