--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -139,12 +139,23 @@ The following subcomponents exist:
 The Event Log Converter is a Framework to convert different files types into an Event Log and convert them back into files. 
 For our project the system provides functionality for XES and CSV import and export. 
 The Framework can easily be extended with additional file types without changing the core functionality.
-
-The following UML class diagram display the class structure.
+\medskip
+The following UML class diagram display the Framework structure:
 
 \begin{landscape}
 \includegraphics[width=\columnwidth]{"UML_Architecture/Event Log Converter CD".png}
 \end{landscape}
+The FileUtility provides access to the framework and its functionality.
+The functions \textit{create\_file(eventLog: EventLog, type:string): string} realises the XES and CSV file uploader requirement and 
+the \textit{get\_event\_log\_from\_file(string path): string} realises the Download refined XES event log file requirement. 
+
+The Factory and Abstract Class Pattern provides the conversion of multiple file types with the same methode. The Factory get the required file type as string and 
+will return the corresponding Converter or Creator. Each file converter must implement the abstract class FileConverter and a file creator must implement
+the abstract class FileCreator.\\
+\medskip
+If other file types should be supported by the application the developer only has to write another Creator/Converter for the type.
+Via the \textit{registerImport(fileType:string, creator :FileCreator)} and \textit{registerExport(fileType:string, converter :FileConverter)} methods these classes can 
+be injected in the FileUtility class. Afterward the functinalty is accessible in the whole applicatoin, additional code is not required.
 
 
 
